fix(gux-icon): set explicit height so they display correctly on safari
COMUI-224

--- a/src/components/gux-modal/gux-modal.less
+++ b/src/components/gux-modal/gux-modal.less
@@ -55,6 +55,7 @@ gux-modal {
         cursor: pointer;
         gux-icon {
           width: 12px;
+          height: 12px;
         }
       }
 
