--- a/src/components/gux-notification-toast/gux-notification-toast.less
+++ b/src/components/gux-notification-toast/gux-notification-toast.less
@@ -17,7 +17,8 @@ gux-notification-toast {
     margin: 4px;
 
     gux-icon {
-      width: 24px
+      width: 24px;
+      height: 24px;
     }
   }
 
@@ -67,6 +68,7 @@ gux-notification-toast {
     cursor: pointer;
     gux-icon {
       width: 12px;
+      height: 12px;
     }
   }
 }
