--- a/src/components/gux-search/gux-search.less
+++ b/src/components/gux-search/gux-search.less
@@ -31,6 +31,7 @@ gux-search {
     color: @icon-color;
     .gux-icon {
       width: 16px;
+      height: 16px;
     }
   }
 }
