--- a/src/components/gux-simple-toast/gux-simple-toast.less
+++ b/src/components/gux-simple-toast/gux-simple-toast.less
@@ -30,7 +30,8 @@ gux-simple-toast {
     }
 
     gux-icon {
-      width: 12px
+      width: 12px;
+      height: 12px;
     }
   }
 
@@ -56,6 +57,7 @@ gux-simple-toast {
     cursor: pointer;
     gux-icon {
       width: 12px;
+      height: 12px;
     }
   }
 }
